--- a/frontend/yuki-app/src/app/component/categories/categories.component.html
+++ b/frontend/yuki-app/src/app/component/categories/categories.component.html
@@ -8,10 +8,8 @@
     <mat-card-content>
       <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="categories__tree">
         <!-- This is the tree node template for leaf nodes -->
-        <!-- There is inline padding applied to this node using styles.
-          This padding value depends on the mat-icon-button width. -->
         <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-          {{node.name}} € {{node.totalAmount}}
+          <app-category-tree-node [categoryTreeNode]="node" [expandable]="false"></app-category-tree-node>
         </mat-tree-node>
         <!-- This is the tree node template for expandable nodes -->
         <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
@@ -22,10 +20,9 @@
                 {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
               </mat-icon>
             </button>
-            {{node.name}} € {{node.totalAmountOfChildren}}
+            <app-category-tree-node [categoryTreeNode]="node" [expandable]="true"></app-category-tree-node>
           </div>
-          <!-- There is inline padding applied to this div using styles.
-              This padding value depends on the mat-icon-button width.  -->
+
           <div [class.categories__tree--invisible]="!treeControl.isExpanded(node)"
                role="group">
             <ng-container matTreeNodeOutlet></ng-container>
