--- a/frontend/yuki-app/src/app/component/overview/overview.component.html
+++ b/frontend/yuki-app/src/app/component/overview/overview.component.html
@@ -1,8 +1,9 @@
 <div class="overview">
-  <div class="overview__categories">
+  <div class="overview__left">
     <app-categories></app-categories>
   </div>
-  <div class="overview__companies">
+  <div class="overview__right">
     <app-companies></app-companies>
+    <app-invoices></app-invoices>
   </div>
 </div>
