--- a/frontend/yuki-app/src/app/app.component.html
+++ b/frontend/yuki-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>Yuki App</span>
+  <span>Yuki Invoice Categorizer App</span>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
