--- a/frontend/yuki-app/src/app/component/categories/categories.component.scss
+++ b/frontend/yuki-app/src/app/component/categories/categories.component.scss
@@ -1,4 +1,11 @@
 .categories {
+  &__title {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 5px;
+  }
+
   &__tree {
 
     &ul, li {
@@ -18,6 +25,17 @@
     &--invisible {
       display: none;
     }
+  }
+
+  &__divider {
+    margin-top: 15px;
+  }
+
+  &__total {
+    color: #ff4081;
+    text-align: end;
+    margin: 20px 20px 0 0;
+    font-weight: bold;
   }
 }
 
