--- a/frontend/yuki-app/src/app/component/companies/companies.component.html
+++ b/frontend/yuki-app/src/app/component/companies/companies.component.html
@@ -1,9 +1,25 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Bedrijven</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <p>xxx</p>
-
-  </mat-card-content>
-</mat-card>
+<div class="companies">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Bedrijven</mat-card-title>
+      <mat-card-subtitle>Deze bedrijven moeten nog gelinked worden aan een categorie</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-list *ngIf="companiesWithoutRule$ | async as companiesWithoutRule">
+        <mat-list-item *ngFor="let company of companiesWithoutRule">
+          <div class="companies__item">
+            <div class="companies__title">
+              {{ company.name }}
+            </div>
+            <div class="companies__match">
+              <button mat-button color="accent" (click)="onLink(company)">
+                <mat-icon>add_link</mat-icon>
+                Link
+              </button>
+            </div>
+          </div>
+        </mat-list-item>
+      </mat-list>
+    </mat-card-content>
+  </mat-card>
+</div>
