--- a/frontend/yuki-app/src/app/component/add-rule-dialog/add-rule-dialog.component.html
+++ b/frontend/yuki-app/src/app/component/add-rule-dialog/add-rule-dialog.component.html
@@ -1,7 +1,8 @@
 <h2 mat-dialog-title>Bedrijf '{{ data.companyName }}' linken aan een categorie</h2>
 <mat-dialog-content class="mat-typography">
   <form [formGroup]="form">
-    <mat-form-field *ngIf="categoryPaths$ | async as categoryPaths" appearance="outline" color="accent">
+    <mat-form-field *ngIf="categoryPaths$ | async as categoryPaths" appearance="outline" color="accent"
+                    class="width-100">
       <mat-label>Kies een categorie</mat-label>
       <mat-select formControlName="categoryId">
         @for (categoryPath of categoryPaths; track categoryPath) {
