--- a/frontend/yuki-app/src/app/component/categories/categories.component.html
+++ b/frontend/yuki-app/src/app/component/categories/categories.component.html
@@ -10,32 +10,36 @@
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="categories__tree">
-        <!-- This is the tree node template for leaf nodes -->
-        <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-          <app-category-tree-node [categoryTreeNode]="node" [expandable]="false"></app-category-tree-node>
-        </mat-tree-node>
-        <!-- This is the tree node template for expandable nodes -->
-        <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
-          <div class="mat-tree-node">
-            <button mat-icon-button matTreeNodeToggle
-                    [attr.aria-label]="'Toggle ' + node.name">
-              <mat-icon class="mat-icon-rtl-mirror">
-                {{ treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right' }}
-              </mat-icon>
-            </button>
-            <app-category-tree-node [categoryTreeNode]="node" [expandable]="true"></app-category-tree-node>
-          </div>
-          <div [class.categories__tree--invisible]="!treeControl.isExpanded(node)"
-               role="group">
-            <ng-container matTreeNodeOutlet></ng-container>
-          </div>
-        </mat-nested-tree-node>
-      </mat-tree>
-      <mat-divider class="categories__divider"></mat-divider>
-      <div class="categories__total">
-        € {{ totalAmount | number:'1.2-2':'nl-BE' }}
-      </div>
+      @if (dataSource.data.length === 0) {
+        <mat-spinner></mat-spinner>
+      } @else {
+        <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="categories__tree">
+          <!-- This is the tree node template for leaf nodes -->
+          <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+            <app-category-tree-node [categoryTreeNode]="node" [expandable]="false"></app-category-tree-node>
+          </mat-tree-node>
+          <!-- This is the tree node template for expandable nodes -->
+          <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+            <div class="mat-tree-node">
+              <button mat-icon-button matTreeNodeToggle
+                      [attr.aria-label]="'Toggle ' + node.name">
+                <mat-icon class="mat-icon-rtl-mirror">
+                  {{ treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right' }}
+                </mat-icon>
+              </button>
+              <app-category-tree-node [categoryTreeNode]="node" [expandable]="true"></app-category-tree-node>
+            </div>
+            <div [class.categories__tree--invisible]="!treeControl.isExpanded(node)"
+                 role="group">
+              <ng-container matTreeNodeOutlet></ng-container>
+            </div>
+          </mat-nested-tree-node>
+        </mat-tree>
+        <mat-divider class="categories__divider"></mat-divider>
+        <div class="categories__total">
+          € {{ totalAmount | number:'1.2-2':'nl-BE' }}
+        </div>
+      }
     </mat-card-content>
   </mat-card>
 </div>
