--- a/frontend/yuki-app/src/app/component/delete-category-dialog/delete-category-dialog.component.html
+++ b/frontend/yuki-app/src/app/component/delete-category-dialog/delete-category-dialog.component.html
@@ -1,6 +1,7 @@
 <h2 mat-dialog-title>Verwijderen categorie</h2>
 <mat-dialog-content class="mat-typography">
-  <p>Ben je zeker dat je categorie <b>{{data.name}}</b> en al zijn sub categorieën wilt verwijderen?</p>
+  <p>Ben je zeker dat je categorie <b class="highlight">{{ data.name }}</b> en al zijn sub categorieën wilt verwijderen?
+  </p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-stroked-button mat-dialog-close>
@@ -8,7 +9,7 @@
     Annuleren
   </button>
   <button mat-flat-button color="warn" cdkFocusInitial (click)="onDelete()">
-    <mat-icon>save</mat-icon>
+    <mat-icon>delete</mat-icon>
     Verwijderen
   </button>
 </mat-dialog-actions>
