--- a/frontend/yuki-app/src/styles.scss
+++ b/frontend/yuki-app/src/styles.scss
@@ -21,3 +21,15 @@ body {
   width: 100% !important;
 }
 
+.mdc-dialog__actions {
+  padding: 0 20px 20px 20px !important;
+}
+
+.highlight {
+  color: #ff4081;
+}
+
+.mat-typography h2 {
+  margin: 0 !important;
+}
+
